ADD: 통일성을 위해 변수명,함수명 일치시킴

--- a/ZIPPLZ_FE/index.html
+++ b/ZIPPLZ_FE/index.html
@@ -21,5 +21,8 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans+KR:wght@100..900&display=swap');
     </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Metamorphous&family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans+KR:wght@100..900&display=swap');
+    </style>
   </body>
 </html>
