--- a/ZIPPLZ_FE/index.html
+++ b/ZIPPLZ_FE/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap"
       rel="stylesheet"
     />
-    <title>ZIP-PlZ</title>
+    <title>ZiPPlZ</title>
   </head>
   <body style="min-width: 320px">
     <div id="root"></div>
